--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body {
 }
 
 button {
-    background-color: rebeccapurple;
+    background-color: orange;
     color: white;
     padding: 1rem;
     border-radius: 4px;
@@ -56,7 +56,7 @@ button {
 
 .popup button {
     background-color: #fff;
-    color: rebeccapurple;
+    color: orangered;
     font-size: 2rem;
     position: absolute;
     top: 10px;
